5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1635_869.log
== SUBMITION (2019-04-14 23:34:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
poreco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0,05)
   print (round (desconto,2))
else
   print (round (preco,2))
-- EXECUTION TIME:
0.196505
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 6
    desconto = preco - (preco * 0,05)
                                   ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:35:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
poreco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0,05)
   print (round (desconto,2))
else :
   print (round (preco,2))
-- EXECUTION TIME:
0.187849
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 6
    desconto = preco - (preco * 0,05)
                                   ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:35:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0,05)
   print (round (desconto,2))
else :
   print (round (preco,2))
-- EXECUTION TIME:
0.146535
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 6
    desconto = preco - (preco * 0,05)
                                   ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:37:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0.05)
   print (round (desconto,2))
else :
   print (round (preco,2))
-- EXECUTION TIME:
0.199647
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print (round (desconto,2))
                             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:37:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0.05)
   print (round (desconto, 2))
else :
   print (round (preco, 2))
-- EXECUTION TIME:
0.153749
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print (round (desconto, 2))
                              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:38:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0.05)
   print(round(desconto, 2))
else :
   print(round(preco, 2))
-- EXECUTION TIME:
0.167391
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto, 2))
                            ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:39:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0.05)
   print(round(desconto,2))
else :
   print(round(preco,2))
-- EXECUTION TIME:
0.224055
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto,2))
                           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:39:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco - (preco * 0.05)
   print(round(desconto,2))
else :
   print(round(preco,2))
-- ERROR:
File "XXXX", line 7
    print(round(desconto,2))
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:40:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = (preco * 0.95)
   print(round(desconto,2))
else :
   print(round(preco,2))
-- EXECUTION TIME:
0.226426
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto,2))
                           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:41:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = (preco * 0.95)
   print(round(desconto,2))
else :
   print(round(preco,2))
-- ERROR:
File "XXXX", line 7
    print(round(desconto,2))
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:42:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = input("Preco: ")
if (preco >= 200) :
	desconto = (preco * 0.95)
   print(round(desconto,2))
else :
   print(round(preco,2))
-- EXECUTION TIME:
0.158496
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto,2))
                           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:43:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = input("Preco: ")
if (preco >= 200) :
	desconto = (preco * 0.95)
   print(round(desconto,2))
else :
   print(round(preco,2))
-- ERROR:
File "XXXX", line 7
    print(round(desconto,2))
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:43:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = input("Preco: ")
if (preco >= 200) :
	desconto = preco * 0.95
   print(round(desconto,2))
else :
   print(round(preco,2))
-- EXECUTION TIME:
0.204321
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto,2))
                           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:44:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = input("Preco: ")
if (preco >= 200) :
	desconto = preco * 0.95
   print(round(desconto,1))
else :
   print(round(preco,1))
-- EXECUTION TIME:
0.208595
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto,1))
                           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:44:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco * 0.95
   print(round(desconto,1))
else :
   print(round(preco,1))
-- ERROR:
File "XXXX", line 7
    print(round(desconto,1))
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:46:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco >= 200) :
	desconto = preco * 0.95
   print(round(desconto , 2))
else :
   print(round(preco , 2))
-- EXECUTION TIME:
0.230431
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto , 2))
                             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:57:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco>=200) :
	desconto = preco * 0.95
   print(round(desconto , 2))
else :
   print(round(preco , 2))
-- EXECUTION TIME:
0.224019
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(round(desconto , 2))
                             ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:59:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco>=200) :
	desconto = preco - (preco * 0.05)
   print(float(desconto))
else :
   print(float(preco))
-- EXECUTION TIME:
0.158241
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    print(float(desconto))
                         ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:59:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
if (preco>=200) :
	desconto = preco - (preco * 0.05)
   print(float(desconto))
else :
   print(float(preco))
-- ERROR:
File "XXXX", line 7
    print(float(desconto))
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:59:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
desconto = 0
if (preco>=200) :
	desconto = preco - (preco * 0.05)
   print(float(desconto))
else :
   print(float(preco))
-- EXECUTION TIME:
0.21949
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 8
    print(float(desconto))
                         ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:00:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("Preco: "))
desconto = 0.0
if (preco>=200) :
	desconto = preco - (preco * 0.05)
   print(float(desconto))
else :
   print(float(preco))
-- EXECUTION TIME:
0.167436
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 8
    print(float(desconto))
                         ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
